# magoptlib

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  introduction.ipynb  pyproject.toml  requirements.txt  test_simulation_cubic_magnet_12mm_3_randompolarisation.mag.pkl.mag.json
docs/: Makefile  conf.py  example.ipynb  make.bat
src/magoptlib/: __init__.py  load_text.py  magoptlib.py  transformation.py  visualization.py
tests/: test_loadtext.py  test_magoptlib.py  test_transformation.py  test_vis.py
