[tool.poetry]
name = "magoptlib"
version = "0.1.0"
description = "Global spherical harmonic analysis for optimal magnet positioning."
authors = ["Palma Inczeffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^>=3.11"
numpy = ">=2.0.0"
scipy = ">=1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
